// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-function-middleware-openapi-generator generate open api definition for example project external api in yaml format 1`] = `
"openapi: 3.0.2
info:
  version: 1.0.0
  title: External API
  description: External API for the shop
servers:
  - url: https://localhost:8080
    description: local server
paths:
  /customer/{customerId}/order:
    post:
      operationId: http-post-order-for-customer
      parameters:
        - name: customerId
          in: path
          required: true
          schema:
            type: string
      requestBody:
        content:
          application/json:
            schema:
              type: object
              properties:
                status:
                  type: string
                  enum:
                    - active
                    - finished
                items:
                  type: array
                  minItems: 1
                  items:
                    type: object
                    properties:
                      id:
                        type: string
                        format: uuid
                      name:
                        type: string
                      price:
                        type: number
                    required:
                      - id
                      - name
                      - price
                    additionalProperties: false
              required:
                - status
                - items
              additionalProperties: false
      responses:
        "201":
          description: 201 response
          content:
            application/json:
              schema:
                type: object
                properties: {}
                additionalProperties: false
      security:
        - BearerAuth: []
    get:
      operationId: http-get-orders-for-customer
      parameters:
        - name: customerId
          in: path
          required: true
          schema:
            type: string
        - name: status
          in: query
          required: false
          schema:
            type: string
            enum:
              - active
              - finished
      responses:
        "200":
          description: 200 response
          content:
            application/json:
              schema:
                type: array
                items:
                  type: object
                  properties:
                    id:
                      type: string
                      format: uuid
                    status:
                      type: string
                      enum:
                        - active
                        - finished
                    items:
                      type: array
                      minItems: 1
                      items:
                        type: object
                        properties:
                          id:
                            type: string
                            format: uuid
                          name:
                            type: string
                          price:
                            type: number
                        required:
                          - id
                          - name
                          - price
                        additionalProperties: false
                  required:
                    - id
                    - status
                    - items
                  additionalProperties: false
        "404":
          description: 404 response
          content:
            application/json:
              schema:
                type: object
                properties:
                  details:
                    type: string
                required:
                  - details
                additionalProperties: false
      security:
        - BearerAuth: []
components:
  securitySchemes:
    FunctionKeyAuth:
      type: apiKey
      in: header
      name: x-functions-key
    BearerAuth:
      type: http
      scheme: bearer
      bearerFormat: JWT
"
`;

exports[`azure-function-middleware-openapi-generator generate open api definition for example project for all endpoints and excludes request and response body 1`] = `
"openapi: 3.0.2
info:
  version: 1.0.0
  title: Full API without request and response body
  description: Full API without request and response body for the shop
servers:
  - url: https://localhost:8080
    description: local server
paths:
  /customer/{customerId}/order:
    post:
      operationId: http-post-order-for-customer
      parameters:
        - name: customerId
          in: path
          required: true
          schema:
            type: string
      responses:
        default:
          description: ok
      security:
        - BearerAuth: []
    get:
      operationId: http-get-orders-for-customer
      parameters:
        - name: customerId
          in: path
          required: true
          schema:
            type: string
        - name: status
          in: query
          required: false
          schema:
            type: string
            enum:
              - active
              - finished
      responses:
        default:
          description: ok
      security:
        - BearerAuth: []
  /order/{orderId}:
    get:
      operationId: internal-http-get-order
      parameters:
        - name: orderId
          in: path
          required: true
          schema:
            type: string
      responses:
        default:
          description: ok
      security:
        - FunctionKeyAuth: []
components:
  securitySchemes:
    FunctionKeyAuth:
      type: apiKey
      in: header
      name: x-functions-key
    BearerAuth:
      type: http
      scheme: bearer
      bearerFormat: JWT
"
`;

exports[`azure-function-middleware-openapi-generator generate open api definition for example project internal api in json format 1`] = `
"{
  "openapi": "3.0.2",
  "info": {
    "version": "1.0.0",
    "title": "Internal API",
    "description": "Internal API for the shop"
  },
  "servers": [
    {
      "url": "https://localhost:8080",
      "description": "local server"
    }
  ],
  "paths": {
    "/order/{orderId}": {
      "get": {
        "operationId": "internal-http-get-order",
        "parameters": [
          {
            "name": "orderId",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string",
                      "format": "uuid"
                    },
                    "status": {
                      "type": "string",
                      "enum": [
                        "active",
                        "finished"
                      ]
                    },
                    "items": {
                      "type": "array",
                      "items": {
                        "type": "object",
                        "properties": {
                          "id": {
                            "type": "string",
                            "format": "uuid"
                          },
                          "name": {
                            "type": "string"
                          },
                          "price": {
                            "type": "number"
                          }
                        },
                        "required": [
                          "id",
                          "name",
                          "price"
                        ],
                        "additionalProperties": false
                      }
                    }
                  },
                  "required": [
                    "id",
                    "status"
                  ],
                  "additionalProperties": false
                }
              }
            }
          },
          "404": {
            "description": "404 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "details": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "details"
                  ],
                  "additionalProperties": false
                }
              }
            }
          }
        },
        "security": [
          {
            "FunctionKeyAuth": []
          }
        ]
      }
    }
  },
  "components": {
    "securitySchemes": {
      "FunctionKeyAuth": {
        "type": "apiKey",
        "in": "header",
        "name": "x-functions-key"
      },
      "BearerAuth": {
        "type": "http",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      }
    }
  }
}"
`;
